# cnproxy

./: .babelrc  .gitignore  .travis.yml  MIT-License.txt  README.md  bunfig.toml  config.sample.js  package-lock.json  package.json  start.js  tsconfig.json  vitest.config.ts
.antigravitycli/: 2c41774a-4530-4645-85e2-47584fa8df33.json
.github/workflows/: ci.yml  release.yml
cnproxy-app/: package.json
cnproxy-app/src/: app.js  index.html  style.css
cnproxy-app/src-tauri/: Cargo.toml  tauri.conf.json
cnproxy-core/: Cargo.toml  DESIGN.md
cnproxy-core/src/: cert.rs  config.rs  flow.rs  lib.rs  proxy.rs  store.rs
docs/: ROADMAP.md
examples/: programmatic.ts
lib/: cnproxy.js
lib/common/: ProxyHttpAgent.js  ProxyHttpsAgent.js  config.js  log.js  utils.js
lib/proxy/: createConnectHandler.js  createFakeServerCenter.js  createRequestHandler.js  createUpgradeHandler.js
lib/responders/: combo.js  index.js  local-file.js  web-file.js
lib/tls/: CertAndKeyContainer.js  FakeServersCenter.js  tlsUtils.js
scripts/: build-sidecar.mjs  build-sidecar.sh  build.mjs  embed-ui.mjs
src/: cnproxy.js  index.ts  logger.ts  options.ts
src/addons/: manager.ts  types.ts
src/api/: diff.ts  (+2 more)
test/: composer.test.ts  diff.test.ts  e2e.test.ts  encoding.test.ts  filter.test.ts  forward.js  har.test.ts  hot-deploy.js  http2.test.ts  import-timing.test.ts  intercept-response.test.ts  intercept.test.ts  listen.js  map-local.test.ts  passthrough.test.ts  persistence.test.ts  respond.js  rules.test.ts  setup.ts  socks.test.ts  streaming.test.ts  web-api.test.ts  websocket.test.ts
(+45 files in other folders)
